--- a/Teacher2/app.json
+++ b/Teacher2/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "演说家",
+    "navigationBarTitleText": "超级演说家童鹏",
     "navigationBarTextStyle":"black"
   }
 }
