--- a/Teacher3/app.json
+++ b/Teacher3/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "超级演说家周莉",
+    "navigationBarTitleText": "平安保险周莉",
     "navigationBarTextStyle":"black"
   }
 }
