--- a/Teacher3/app.json
+++ b/Teacher3/app.json
@@ -10,7 +10,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "演说家肖茂峰",
+    "navigationBarTitleText": "平安周莉",
     "navigationBarTextStyle":"black"
   }
 }
