--- a/Tmaster/Tmaster/app.json
+++ b/Tmaster/Tmaster/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/cateList/cateList",
+    "pages/updateCate/updateCate",
     "pages/addCate/addCate",
     "pages/home/home",
     "pages/register/register",
