--- a/Teacher5/app.json
+++ b/Teacher5/app.json
@@ -8,7 +8,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "周伟",
+    "navigationBarTitleText": "好望角汇成周伟",
     "navigationBarTextStyle":"black"
   }
 }
